--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "simple-json-db": "^2.0.0"
+    "simple-json-db": "^2.0.0",
+    "stripe": "^11.6.0"
   }
 }
