--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "simple-json-db": "^2.0.0",
+    "socket.io": "^4.0.0",
     "stripe": "^11.6.0"
   }
 }
